--- a/front-end-tests/selenium-web-driver-tests/IdeaCenterPOM/IdeaCenterPOM/IdeaCenterPOM.csproj
+++ b/front-end-tests/selenium-web-driver-tests/IdeaCenterPOM/IdeaCenterPOM/IdeaCenterPOM.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bogus" Version="35.6.2" />
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
     <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
